09-infrastructure/kafka-endpoint-service.yml
apiVersion: v1
kind: Service
metadata:
  name: broker
spec:
  ports:
  - port: 9092
---
apiVersion: v1
kind: Endpoints
metadata:
  name: broker
subsets:
- addresses:
  - ip: 10.0.2.5
  ports:
  - port: 9092
