09-infrastructure/grafana-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - "grafana.cosmos.io"
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: grafana
            port:
              number: 3000
