09-infrastructure/kiali-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
    - "kiali.cosmos.io"
  gateways:
    - kiali-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
