09-infrastructure/prometheus-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
    - "prometheus.cosmos.io"
  gateways:
    - prometheus-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: prometheus
            port:
              number: 9090
